tests/modules/errors/undefined_export.nfu
const defined = 42;

export undefined;
